6794939: assert(_base == OopPtr,"subclass must override cast_to_ptr_type")

Fix the assert in TypeKlassPtr::cast_to_ptr_type().

Reviewed-by: never